--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,18 +4,21 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node --esm src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "better-sqlite3": "^12",
     "cors": "^2.8.5",
-    "better-sqlite3": "^8.4.0",
-    "multer": "^1.4.5",
-    "csv-parse": "^5.5.0"
+    "csv-parse": "^5.5.0",
+    "express": "^4.18.2",
+    "multer": "^2.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.0"
   }
