--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "quiz-initiation-informatique-n1",
   "private": true,
-  "workspaces": ["apps/frontend", "apps/backend"],
+  "workspaces": [
+    "apps/frontend",
+    "apps/backend"
+  ],
   "scripts": {
+    "dev": "concurrently -n backend,frontend -c auto \"npm --workspace apps/backend run dev\" \"npm --workspace apps/frontend run dev\"",
     "dev:frontend": "npm --workspace apps/frontend run dev",
     "build:frontend": "npm --workspace apps/frontend run build",
     "start:frontend": "npm --workspace apps/frontend run preview",
@@ -23,6 +27,10 @@
     "playwright": "^1.39.0",
     "tailwindcss": "^3.4.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "autoprefixer": "^10.4.0",
+    "concurrently": "^9.0.0"
+  },
+  "overrides": {
+    "multer": "2.0.2"
   }
 }
