--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:e2e": "playwright test"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.16",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.0",
