--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,25 +4,31 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec \"ts-node --esm src/index.ts\"",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "dev": "nodemon --watch src --ext ts --exec \"tsx src/index.ts\"",
+    "start": "node --enable-source-maps ./dist/index.js",
+    "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "better-sqlite3": "^12",
+    "better-sqlite3": "^12.4.1",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.0",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
-    "express": "^4.18.2",
-    "multer": "^2.0.0"
+    "express": "^4.21.2",
+    "multer": "^2.0.2",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.6.2",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.0"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
