--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apps/backend"
   ],
   "scripts": {
+    "start": "npm run dev",
     "dev": "concurrently -n backend,frontend -c auto \"npm --workspace apps/backend run dev\" \"npm --workspace apps/frontend run dev -- --open\"",
     "dev:frontend": "npm --workspace apps/frontend run dev",
     "build:frontend": "npm --workspace apps/frontend run build",
@@ -22,12 +23,18 @@
     "noco:unix": "bash ./noco/start-nocodb.sh"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@types/papaparse": "^5.3.16",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.0",
     "concurrently": "^9.2.1",
     "eslint": "^8.56.0",
+    "nocodb": "^0.265.1",
     "nodemon": "^3.1.10",
     "playwright": "^1.39.0",
     "postcss": "^8.4.0",
@@ -38,5 +45,9 @@
   },
   "overrides": {
     "multer": "2.0.2"
+  },
+  "dependencies": {
+    "csv-parser": "^3.2.0",
+    "papaparse": "^5.5.3"
   }
 }
