--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,18 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "idb": "^7.1.1",
+    "papaparse": "^5.4.1",
+    "pdfjs-dist": "^5.4.449",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^10.2.0",
     "react-router-dom": "^6.22.1",
-    "zustand": "^4.4.0",
-    "papaparse": "^5.4.1",
-    "idb": "^7.1.1",
-    "axios": "^1.6.7"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "typescript": "^5.4.0"
   }
 }
