--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "csv-parser": "^3.2.0",
-    "papaparse": "^5.5.3"
+    "papaparse": "^5.5.3",
+    "pdf-parse": "^2.4.5"
   }
 }
